# gldframes

./: README.md  pyproject.toml
assets/: gldframes.desktop
packaging/debian/: control
src/gldframes/: __init__.py  app.py
src/gldframes/export/: ffmpeg.py
src/gldframes/settings/: models.py
src/gldframes/styles/: library.py
src/gldframes/subtitle_editor/: formats.py  models.py
src/gldframes/transcription/: chunker.py  faster_whisper.py
src/gldframes/ui/: main_window.py
